Revision history for Spreadsheet-HTML-python

0.0.2

0.0.1
    - First version, released on an unsuspecting world.